[gd_scene load_steps=14 format=2]

[ext_resource path="res://res/buttons/BackButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://res/buttons/FowardButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://res/popups/popup_credits.gd" type="Script" id=3]
[ext_resource path="res://res/Assets/Popup/Credits/Título.png" type="Texture" id=4]
[ext_resource path="res://res/Assets/Popup/Credits/Créditos_Popup.png" type="Texture" id=5]
[ext_resource path="res://res/Assets/Popup/Credits/Texto_Pag3.png" type="Texture" id=6]
[ext_resource path="res://res/Assets/Popup/Credits/Texto_Pag1.png" type="Texture" id=7]
[ext_resource path="res://res/Assets/Popup/Credits/Pag2.png" type="Texture" id=8]
[ext_resource path="res://res/Assets/Popup/Credits/Pag3.png" type="Texture" id=9]
[ext_resource path="res://res/Assets/Popup/Credits/Pag1.png" type="Texture" id=10]
[ext_resource path="res://res/Assets/Popup/Credits/Texto_Pag2.png" type="Texture" id=11]
[ext_resource path="res://res/Assets/Buttons/Sair.png" type="Texture" id=12]
[ext_resource path="res://res/buttons/MenuButton.tscn" type="PackedScene" id=13]

[node name="PopupCredits" type="Popup"]
visible = true
margin_left = 627.0
margin_top = 228.0
margin_right = 1669.0
margin_bottom = 852.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1062.0
margin_bottom = 624.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 82.0
margin_top = 40.0
margin_right = 1071.0
margin_bottom = 584.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Menu"]
margin_right = 989.0
margin_bottom = 75.0

[node name="TextureRect" type="TextureRect" parent="Menu/CenterContainer"]
margin_left = 360.0
margin_right = 629.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )
texture = ExtResource( 4 )

[node name="Page" type="HBoxContainer" parent="Menu"]
margin_top = 79.0
margin_right = 989.0
margin_bottom = 494.0
size_flags_vertical = 3
custom_constants/separation = 60
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Page"]
margin_left = 27.0
margin_right = 87.0
margin_bottom = 415.0
alignment = 1

[node name="BackButton" parent="Menu/Page/VBoxContainer" instance=ExtResource( 1 )]
modulate = Color( 1, 1, 1, 0 )
margin_top = 168.0
margin_bottom = 246.0
disabled = true

[node name="FirstPage" type="HBoxContainer" parent="Menu/Page"]
margin_left = 147.0
margin_right = 841.0
margin_bottom = 415.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="Menu/Page/FirstPage"]
margin_right = 694.0
margin_bottom = 415.0
rect_min_size = Vector2( 694, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Menu/Page/FirstPage/CenterContainer"]
margin_left = 2.0
margin_top = 37.0
margin_right = 691.0
margin_bottom = 377.0
rect_min_size = Vector2( 176, 176 )
texture = ExtResource( 7 )
stretch_mode = 1

[node name="SecondPage" type="HBoxContainer" parent="Menu/Page"]
visible = false
margin_left = 874.0
margin_right = 1568.0
margin_bottom = 441.0
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="Menu/Page/SecondPage"]
margin_right = 694.0
margin_bottom = 441.0
rect_min_size = Vector2( 694, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Menu/Page/SecondPage/CenterContainer"]
margin_left = 3.0
margin_top = 51.0
margin_right = 691.0
margin_bottom = 390.0
rect_min_size = Vector2( 176, 176 )
texture = ExtResource( 11 )
stretch_mode = 1

[node name="ThirdPage" type="HBoxContainer" parent="Menu/Page"]
visible = false
margin_left = 1628.0
margin_right = 2322.0
margin_bottom = 441.0
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="Menu/Page/ThirdPage"]
margin_right = 694.0
margin_bottom = 441.0
rect_min_size = Vector2( 694, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Menu/Page/ThirdPage/CenterContainer"]
margin_left = 2.0
margin_top = 119.0
margin_right = 691.0
margin_bottom = 322.0
rect_min_size = Vector2( 176, 176 )
texture = ExtResource( 6 )
stretch_mode = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Menu/Page"]
margin_left = 901.0
margin_right = 961.0
margin_bottom = 415.0
alignment = 1

[node name="FowardButton" parent="Menu/Page/VBoxContainer2" instance=ExtResource( 2 )]
margin_top = 168.0
margin_bottom = 246.0

[node name="Control" type="Control" parent="Menu"]
margin_top = 498.0
margin_right = 989.0
margin_bottom = 520.0
rect_min_size = Vector2( 0, 22 )

[node name="PageDisplay" type="CenterContainer" parent="Menu"]
margin_top = 524.0
margin_right = 989.0
margin_bottom = 544.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pag1" type="TextureRect" parent="Menu/PageDisplay"]
margin_left = 454.0
margin_right = 534.0
margin_bottom = 20.0
texture = ExtResource( 10 )

[node name="Pag2" type="TextureRect" parent="Menu/PageDisplay"]
visible = false
margin_left = 454.0
margin_right = 534.0
margin_bottom = 20.0
texture = ExtResource( 8 )

[node name="Pag3" type="TextureRect" parent="Menu/PageDisplay"]
visible = false
margin_left = 454.0
margin_right = 534.0
margin_bottom = 20.0
texture = ExtResource( 9 )

[node name="Exit" parent="." instance=ExtResource( 13 )]
margin_left = 983.0
margin_top = 40.0
margin_right = 1037.0
margin_bottom = 95.0
texture_normal = ExtResource( 12 )
[connection signal="pressed" from="Menu/Page/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Menu/Page/VBoxContainer2/FowardButton" to="." method="_on_FowardButton_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
